# docs/swagger.json
@@ -38,6 +38,44 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "post request example",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "places"
+                ],
+                "summary": "post request example",
+                "parameters": [
+                    {
+                        "description": "Add place",
+                        "name": "place",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Place"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "fail",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/api/places/{id}": {
@@ -62,23 +100,6 @@
                     }
                 }
             }
-        },
-        "/ping": {
-            "get": {
-                "description": "check connection",
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Ping",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/routers.PingModel"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -92,14 +113,6 @@
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "routers.PingModel": {
-            "type": "object",
-            "properties": {
-                "hello": {
                     "type": "string"
                 }
             }
